<resources>
    <string name="app_name">Social Network</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="posts">Posts</string>
    <string name="likes">Likes</string>
    <string name="follow">Follow</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="options">Options</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="comments">comments</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_post">Edit post</string>
    <string name="all_posts">All posts</string>
    <string name="description">Description</string>
    <string name="saved_posts">Saved posts</string>
    <string name="comments_label">Comments</string>
    <string name="updated_post">Updated post</string>
    <string name="post_deleted">Post deleted</string>
    <string name="search_users">Search users</string>
    <string name="edit_profile">Edit profile</string>
    <string name="published_post">Published post</string>
    <string name="comment_posted">Comment posted</string>
    <string name="no_saved_posts">No saved posts</string>
    <string name="enter_an_email">Enter an email</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="select_an_image">Select an image</string>
    <string name="successful_login">Successful login</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="updated_information">Updated information</string>
    <string name="updated_cover_photo">Updated cover photo</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="write_a_comment_first">Write a comment first</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="updated_profile_picture">Updated profile picture</string>
    <string name="the_post_has_been_deleted">The post has been deleted</string>
    <string name="registered_user_successfully">Registered user successfully</string>
    <string name="username_not_available_try_another">Username not available. Try another</string>
    <string name="you_do_not_have_an_account_register">You do not have an account? Register</string>
    <string name="password_must_be_8_or_more_characters">Password must be 8 or more characters</string>
    <string name="invalid_email_please_enter_a_valid_email">Invalid email, please enter a valid email</string>
    <string name="are_you_sure_you_want_to_delete_your_post">Are you sure you want to delete your post?</string>
    <string name="are_you_sure_you_want_to_delete_your_comment">Are you sure you want to delete your comment?</string>
    <string name="when_you_follow_people_you_will_see_their_posts_here">When you follow people, you will see their posts here</string>
</resources>