<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rasenyer.socialnetwork.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.rasenyer.socialnetwork.ui.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.rasenyer.socialnetwork.ui.fragments.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rasenyer.socialnetwork.ui.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rasenyer.socialnetwork.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>