<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CommentActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/MaterialCardView"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerViewPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_post"
                tools:itemCount="1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_comment"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/mTextViewPostDeleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:alpha="0.5"
        android:text="@string/the_post_has_been_deleted"
        android:textAppearance="?attr/textAppearanceSearchResultTitle"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ConstraintLayout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/mProfilePicture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ConstraintLayout"
                android:layout_toStartOf="@id/mSend"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:hint="@string/write_your_comment"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:background="@null"/>

            <ImageView
                android:id="@+id/mSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_send"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>